--- a/style/style.css
+++ b/style/style.css
@@ -10,12 +10,11 @@
 
 .IB {
     width: 300px;
-    /* height: 300px; */
     display: inline-block;
     margin: 10px;
     text-align: center;
     background: skyblue;
-    padding: 30px;
+    padding: 30px 10px;
     border-radius: 10px;
     border: 2px solid darkslategray;
     color: #ffffff;
