--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@
     display: inline-block;
     margin: 10px;
     text-align: center;
-    background: skyblue;
+    background-image: linear-gradient(skyblue, rgb(158, 185, 194));
     padding: 30px 10px;
     border-radius: 10px;
     border: 2px solid darkslategray;
