--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,27 @@ body {
     color: white;
 }
 
+div.scrollmenu {
+    background-color: #333;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  div.scrollmenu button, div.scrollmenu p {
+    background-color: #333;
+    display: inline-block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+    margin-bottom: 0px;
+    border: none;
+  }
+  
+  div.scrollmenu button:hover {
+    background-color: #777;
+  }
+
 .days {
     overflow: auto;
     white-space: nowrap;
