added label to 5 day forecast

--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,10 @@ div.scrollmenu {
     padding: 5px 10px;
 }
 
+.text-center {
+    text-align: center;
+}
+
 #input {
     background: whitesmoke;
     color: #000000;
