--- a/style/style.css
+++ b/style/style.css
@@ -41,7 +41,7 @@ div.scrollmenu {
     display: inline-block;
     margin: 10px 0px 10px 10px;
     text-align: center;
-    background-image: linear-gradient(skyblue,rgb(196, 234, 247));
+    background-image: linear-gradient(45deg, skyblue,rgb(196, 234, 247));
     padding: 30px 10px;
     border-radius: 10px;
     border: 2px solid darkslategray;
