--- a/style/style.css
+++ b/style/style.css
@@ -41,6 +41,7 @@ div.scrollmenu {
     display: block;
     border: 3px solid darkslategrey;
     border-radius: 10px;
+    padding: 20px 10px;
 }
 
 
