--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ div.scrollmenu {
     background-image: linear-gradient(45deg, skyblue,rgb(196, 234, 247));
     padding: 30px 10px;
     border-radius: 10px;
-    border: 2px solid darkslategray;
+    border: 3px solid darkslategray;
     color: #ffffff;
     font-size: 20px;
 }
@@ -152,8 +152,17 @@ div.scrollmenu {
         border-radius: 0px;
         padding: 20px 10px;
         border-bottom: 3px solid darkslategray;
-        
         border-left: none;
         border-right: none;
 }
+    .IB {
+       
+        padding: 30px 10px;
+        border-radius: 0px;
+        border: 3px solid darkslategray;
+        border-left: none;
+        border-right: none;
+        color: #ffffff;
+        font-size: 20px;
+    }
 }
