--- a/style/style.css
+++ b/style/style.css
@@ -70,7 +70,7 @@ div.scrollmenu {
     background-image: linear-gradient(45deg, skyblue,rgb(196, 234, 247));
     padding: 30px 10px;
     border-radius: 10px;
-    border: 3px solid darkslategray;
+    border: 2px solid darkslategray;
     color: #ffffff;
     font-size: 20px;
 }
@@ -155,14 +155,10 @@ div.scrollmenu {
         border-left: none;
         border-right: none;
 }
-    .IB {
-       
-        padding: 30px 10px;
-        border-radius: 0px;
-        border: 3px solid darkslategray;
-        border-left: none;
-        border-right: none;
-        color: #ffffff;
-        font-size: 20px;
-    }
+.current-weather {
+    border-radius: 0px;
+    border: 3px solid darkslategray;
+    border-left:  none;
+    border-right:  none;
+}
 }
