--- a/style/style.css
+++ b/style/style.css
@@ -135,7 +135,7 @@ div.scrollmenu {
 }
 
 #input {
-    background: whitesmoke;
+    background: white;
     color: #000000;
     border: 1px solid black;
 }
